--- a/server.cfg
+++ b/server.cfg
@@ -3,11 +3,6 @@
 endpoint_add_tcp "0.0.0.0:30420"
 endpoint_add_udp "0.0.0.0:30420"
 
-# DATABASE
-#set es_enableCustomData 1
-#set mysql_connection_string "server=127.0.0.01;database=essentialmode;userid=root;password=;"
-
-# CFX CORE
 start mapmanager
 start chat
 start spawnmanager
@@ -17,52 +12,8 @@ start hardcap
 start rconlog
 start scoreboard
 start playernames
-start baseevents
 
-# MYSQL
-#start async
-#start mysql-async
-
-# ESSENTIALMODE
-#start essentialmode
-#start esplugin_mysql
-#start es_admin2
-
-# ESX
-#start es_extended
-#start esx_menu_default
-#start esx_menu_list
-#start esx_menu_dialog
-
-# ESX Plugins
-#start cron
-#start esx_addonaccount
-#start esx_addoninventory
-#start esx_billing
-#start esx_datastore
-#start esx_society
-#start esx_identity
-#start esx_status
-#start esx_basicneeds
-#start esx_optionalneeds
-#start skinchanger
-#start esx_skin
-
-# ESX JOBS
-#start esx_policejob
-#start esx_ambulancejob
-#start esx_jobs
-#start esx_joblisting
-
-# ESX SHOPS
-#start new_banking
-#start esx_vehicleshop
-#start esx_shops
-
-# SessionManager
-restart sessionmanager
-
-sv_scriptHookAllowed 0
+sv_scriptHookAllowed 1
 
 # change this
 #rcon_password yay
@@ -76,7 +27,7 @@ sv_hostname "My new FXServer!"
 #load_server_icon myLogo.png
 
 # convars for use from script
-set temp_convar "hey world!"
+set temp_convar "alo mundao!"
 
 # disable announcing? clear out the master by uncommenting this
 sv_master1 ""
@@ -88,14 +39,13 @@ sv_master1 ""
 # add system admins
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but don't allow quit
-add_principal identifier.steam:110000107d2ef37 group.admin 	# add the admin to the group
-#add_ace resource.essentialmode command.add_principal allow 	# Essentialmode
+add_principal identifier.steam:110000112345678 group.admin # add the admin to the group
 
 # remove the # to hide player endpoints in external log output
-#sv_endpointprivacy true
+sv_endpointprivacy true
 
 # server slots limit (must be between 1 and 31)
 sv_maxclients 30
 
 # license key for server (https://keymaster.fivem.net)
-sv_licenseKey 
+sv_licenseKey changeme
