--- a/server.cfg
+++ b/server.cfg
@@ -44,11 +44,20 @@ start esx_billing
 start esx_basicneeds
 start skinchanger
 start esx_skin
+start esx_optionalneeds
 
 # ESX Jobs
 start esx_policejob
+start esx_jobs
+start esx_joblisting
 
-sv_scriptHookAllowed 1
+# ESX Shops
+start esx_shops
+
+# SESSIONMANAGER
+restart sessionmanager
+
+sv_scriptHookAllowed 0
 
 # change this
 #rcon_password yay
