--- a/server.cfg
+++ b/server.cfg
@@ -42,14 +42,16 @@ start esx_society
 start esx_identity
 start esx_billing
 start esx_basicneeds
+start esx_optionalneeds
+start esx_status
 start skinchanger
 start esx_skin
-start esx_optionalneeds
 
 # ESX Jobs
 start esx_policejob
 start esx_jobs
 start esx_joblisting
+start esx_ambulancejob
 
 # ESX Shops
 start esx_shops
