--- a/server.cfg
+++ b/server.cfg
@@ -55,6 +55,8 @@ start esx_ambulancejob
 
 # ESX Shops
 start esx_shops
+start esx_clotheshop
+esx_barbershop
 
 # SESSIONMANAGER
 restart sessionmanager
