banking and weashops

--- a/server.cfg
+++ b/server.cfg
@@ -17,6 +17,7 @@ start hardcap
 start rconlog
 start scoreboard
 start playernames
+start baseevents
 
 # MYSQL
 start async
@@ -46,6 +47,7 @@ start esx_optionalneeds
 start esx_status
 start skinchanger
 start esx_skin
+start esx_license
 
 # ESX Jobs
 start esx_policejob
@@ -56,7 +58,11 @@ start esx_ambulancejob
 # ESX Shops
 start esx_shops
 start esx_clotheshop
-esx_barbershop
+start esx_barbershop
+start esx_weashops
+
+# ESX Others
+start new_banking
 
 # SESSIONMANAGER
 restart sessionmanager
