vehicleshop and garage

--- a/server.cfg
+++ b/server.cfg
@@ -48,6 +48,7 @@ start esx_status
 start skinchanger
 start esx_skin
 start esx_license
+start instance
 
 # ESX Jobs
 start esx_policejob
@@ -60,6 +61,7 @@ start esx_shops
 start esx_clotheshop
 start esx_barbershop
 start esx_weashops
+start esx_vehicleshop
 
 # ESX Others
 start new_banking
