hospital and drugs

--- a/server.cfg
+++ b/server.cfg
@@ -55,6 +55,7 @@ start esx_policejob
 start esx_jobs
 start esx_joblisting
 start esx_ambulancejob
+start esx_drugs
 
 # ESX Shops
 start esx_shops
@@ -65,6 +66,11 @@ start esx_vehicleshop
 
 # ESX Others
 start new_banking
+start esx_garage
+start esx_hospital
+
+# CUSTOMS
+start pNotify
 
 # SESSIONMANAGER
 restart sessionmanager
