--- a/server.cfg
+++ b/server.cfg
@@ -69,9 +69,14 @@ start new_banking
 start esx_garage
 start esx_hospital
 start esx_property
+start esx_holdup
 
-# CUSTOMS
+# CUSTOMS ADDONS
 start pNotify
+
+# CUSTOM VEHICLES
+start hayabusa
+start bmwgs1200
 
 # SESSIONMANAGER
 restart sessionmanager
