--- a/server.cfg
+++ b/server.cfg
@@ -56,6 +56,8 @@ start esx_jobs
 start esx_joblisting
 start esx_ambulancejob
 start esx_drugs
+start esx_taxijob
+start esx_mecanojob
 
 # ESX Shops
 start esx_shops
