esx_dmvscholl and voice

--- a/server.cfg
+++ b/server.cfg
@@ -49,6 +49,7 @@ start skinchanger
 start esx_skin
 start esx_license
 start instance
+start esx_voice
 
 # ESX Jobs
 start esx_policejob
@@ -79,7 +80,6 @@ start pNotify
 
 # CUSTOM VEHICLES
 start hayabusa
-start bmwgs1200
 
 # SESSIONMANAGER
 restart sessionmanager
