--- a/server.cfg
+++ b/server.cfg
@@ -79,6 +79,8 @@ start esx_dmvschool
 
 # CUSTOMS ADDONS
 start pNotify
+start SexySpeedometer
+start synn-loadscreen
 
 # CUSTOM VEHICLES
 start hayabusa
