--- a/server.cfg
+++ b/server.cfg
@@ -82,6 +82,8 @@ start esx_thief
 start pNotify
 start SexySpeedometer
 start synn-loadscreen
+start CompassStreetHUD
+start coordsaver
 
 # CUSTOM VEHICLES
 start hayabusa
