--- a/server.cfg
+++ b/server.cfg
@@ -74,7 +74,7 @@ start esx_garage
 start esx_hospital
 start esx_property
 start esx_holdup
-start esx_phone3
+start esx_phone
 start esx_dmvschool
 start esx_thief
 
