--- a/server.cfg
+++ b/server.cfg
@@ -51,6 +51,8 @@ start esx_license
 start instance
 start esx_voice
 start salty_death
+start esx_accessories
+start esx_animations
 
 # ESX Jobs
 start esx_policejob
@@ -77,6 +79,7 @@ start esx_holdup
 start esx_phone
 start esx_dmvschool
 start esx_thief
+start esx_vehicle_inventory
 
 # CUSTOMS ADDONS
 start pNotify
