--- a/server.cfg
+++ b/server.cfg
@@ -53,6 +53,7 @@ start esx_voice
 start salty_death
 start esx_accessories
 start esx_animations
+start esx_advanced_inventory
 
 # ESX Jobs
 start esx_policejob
@@ -80,6 +81,7 @@ start esx_phone
 start esx_dmvschool
 start esx_thief
 start esx_vehicle_inventory
+start esx_jailer
 
 # CUSTOMS ADDONS
 start pNotify
