--- a/server.cfg
+++ b/server.cfg
@@ -82,6 +82,7 @@ start esx_dmvschool
 start esx_thief
 start esx_vehicle_inventory
 start esx_jailer
+start esx_eden_garage
 
 # CUSTOMS ADDONS
 start pNotify
