--- a/server.cfg
+++ b/server.cfg
@@ -83,13 +83,17 @@ start esx_thief
 start esx_vehicle_inventory
 start esx_jailer
 start esx_eden_garage
+start esx_lscustom
 
-# CUSTOMS ADDONS
+# OTHERS ADDONS
 start pNotify
-start SexySpeedometer
-start synn-loadscreen
 start CompassStreetHUD
 start coordsaver
+start FRFuel
+
+# CUSTOMS
+start SexySpeedometer
+start synn-loadscreen
 
 # CUSTOM VEHICLES
 start hayabusa
