--- a/server.cfg
+++ b/server.cfg
@@ -89,7 +89,7 @@ start esx_lscustom
 start pNotify
 start CompassStreetHUD
 start coordsaver
-start FRFuel
+start esx_AdvancedFuel
 
 # CUSTOMS
 start SexySpeedometer
