--- a/server.cfg
+++ b/server.cfg
@@ -70,6 +70,7 @@ start esx_clotheshop
 start esx_barbershop
 start esx_weashops
 start esx_vehicleshop
+start esx_lscustom
 
 # ESX Others
 start new_banking
@@ -83,13 +84,13 @@ start esx_thief
 start esx_vehicle_inventory
 start esx_jailer
 start esx_eden_garage
-start esx_lscustom
+start esx_AdvancedFuel
 
 # OTHERS ADDONS
 start pNotify
 start CompassStreetHUD
 start coordsaver
-start esx_AdvancedFuel
+start BetterRecoil
 
 # CUSTOMS
 start SexySpeedometer
