--- a/server.cfg
+++ b/server.cfg
@@ -85,6 +85,7 @@ start esx_vehicle_inventory
 start esx_jailer
 start esx_eden_garage
 start esx_AdvancedFuel
+start esx_outlawalert
 
 # OTHERS ADDONS
 start pNotify
