--- a/server.cfg
+++ b/server.cfg
@@ -101,6 +101,9 @@ start synn-loadscreen
 start hayabusa
 start xt660
 
+# SNIPPETS
+start NoMoreWeaponsOnNPC
+
 # SESSIONMANAGER
 restart sessionmanager
 
