--- a/server.cfg
+++ b/server.cfg
@@ -104,6 +104,7 @@ start xt660
 # SNIPPETS
 start NoMoreWeaponsOnNPC
 start NoWeaponReward
+start NoLicense
 
 # SESSIONMANAGER
 restart sessionmanager
