--- a/server.cfg
+++ b/server.cfg
@@ -15,7 +15,7 @@ start sessionmanager
 start fivem
 start hardcap
 start rconlog
-start scoreboard
+#start scoreboard
 start playernames
 start baseevents
 
@@ -89,12 +89,13 @@ start esx_outlawalert
 
 # OTHERS ADDONS
 start pNotify
+start SexySpeedometer
 start CompassStreetHUD
 start coordsaver
 start BetterRecoil
+start RealAITraffic
 
 # CUSTOMS
-start SexySpeedometer
 start synn-loadscreen
 
 # CUSTOM VEHICLES
