--- a/server.cfg
+++ b/server.cfg
@@ -106,6 +106,7 @@ start xt660
 start NoMoreWeaponsOnNPC
 start NoWeaponReward
 start NoLicense
+start NoMoreCopNPC
 
 # SESSIONMANAGER
 restart sessionmanager
