--- a/server.cfg
+++ b/server.cfg
@@ -94,6 +94,7 @@ start CompassStreetHUD
 start coordsaver
 start BetterRecoil
 start RealAITraffic
+start noplayerblips
 
 # CUSTOMS
 start synn-loadscreen
@@ -136,10 +137,15 @@ sv_master1 ""
 #sv_authMinTrust 5
 
 # add system admins
-add_ace resource.essentialmode command.add_principal allow # Essentialmode
+# Essentialmode
+add_ace resource.essentialmode command.add_principal allow
 add_ace group.admin command allow # allow all commands
-add_ace group.admin command.quit deny # but don't allow quit
-add_principal identifier.steam:110000112345678 group.admin # add the admin to the group
+# but don't allow quit
+add_ace group.admin command.quit deny
+# add the admin to the group
+add_principal identifier.steam:110000112345678 group.admin
+# NoPlayerBlips Admin Permission
+add_ace identifier.steam:110000112345678 npb.god allow
 
 # remove the # to hide player endpoints in external log output
 sv_endpointprivacy true
