--- a/server.cfg
+++ b/server.cfg
@@ -88,6 +88,7 @@ start esx_AdvancedFuel
 start esx_outlawalert
 
 # OTHERS ADDONS
+start vSync
 start pNotify
 start SexySpeedometer
 start CompassStreetHUD
@@ -95,6 +96,8 @@ start coordsaver
 start BetterRecoil
 start RealAITraffic
 start noplayerblips
+start pingkick
+start afkkick
 
 # CUSTOMS
 start synn-loadscreen
@@ -143,9 +146,9 @@ add_ace group.admin command allow # allow all commands
 # but don't allow quit
 add_ace group.admin command.quit deny
 # add the admin to the group
-add_principal identifier.steam:110000112345678 group.admin
+add_principal identifier.steam:110000107d2ef37 group.admin
 # NoPlayerBlips Admin Permission
-add_ace identifier.steam:110000112345678 npb.god allow
+add_ace identifier.steam:110000107d2ef37 npb.god allow
 
 # remove the # to hide player endpoints in external log output
 sv_endpointprivacy true
