--- a/server.cfg
+++ b/server.cfg
@@ -54,6 +54,7 @@ start salty_death
 start esx_accessories
 start esx_animations
 start esx_advanced_inventory
+start esx_service
 
 # ESX Jobs
 start esx_policejob
@@ -63,6 +64,7 @@ start esx_ambulancejob
 start esx_drugs
 start esx_taxijob
 start esx_mecanojob
+start esx_realestateagentjob
 
 # ESX Shops
 start esx_shops
@@ -86,6 +88,7 @@ start esx_jailer
 start esx_eden_garage
 start esx_AdvancedFuel
 start esx_outlawalert
+start esx_rpchat
 
 # OTHERS ADDONS
 start vSync
@@ -96,8 +99,9 @@ start coordsaver
 start BetterRecoil
 start RealAITraffic
 start noplayerblips
-start pingkick
+#start pingkick
 start afkkick
+start NoMoreScope
 
 # CUSTOMS
 start synn-loadscreen
