--- a/server.cfg
+++ b/server.cfg
@@ -28,6 +28,10 @@ start essentialmode
 start esplugin_mysql
 start es_admin2
 
+# EasyAdmin
+start EasyAdmin
+start anticheese-anticheat
+
 # ESX Core
 start es_extended
 start esx_menu_default
@@ -152,7 +156,15 @@ add_ace group.admin command.quit deny
 # add the admin to the group
 add_principal identifier.steam:110000107d2ef37 group.admin
 # NoPlayerBlips Admin Permission
-add_ace identifier.steam:110000107d2ef37 npb.god allow
+#add_ace identifier.steam:110000107d2ef37 npb.god allow
+
+# EasyAdmin
+add_ace group.admin easyadmin allow	    # allow all commands for admins
+set ea_useQueue "true"					# enable EasyAdmin Queue System, default: "false"
+set ea_QueueTries "500"					# how often do we want to retry to join the queue? default: "500"
+set ea_MenuButton "122"					# set our menu button to F11. default F2: "289" 
+set ea_alwaysShowButtons "false"		# we don't want to see buttons we can't even access, do we? default: "false"
+set ea_moderationNotification "false"   # this can be either "false" or a discord webhook address, this will send a discord message if an admin takes actions against a player  ( such as banning and kicking )
 
 # remove the # to hide player endpoints in external log output
 sv_endpointprivacy true
