easyadmin + anticheese confs

--- a/server.cfg
+++ b/server.cfg
@@ -158,13 +158,15 @@ add_principal identifier.steam:110000107d2ef37 group.admin
 # NoPlayerBlips Admin Permission
 #add_ace identifier.steam:110000107d2ef37 npb.god allow
 
-# EasyAdmin
-add_ace group.admin easyadmin allow	    # allow all commands for admins
-set ea_useQueue "true"					# enable EasyAdmin Queue System, default: "false"
-set ea_QueueTries "500"					# how often do we want to retry to join the queue? default: "500"
-set ea_MenuButton "56"					# set our menu button to F9. default F2: "289" 
-set ea_alwaysShowButtons "false"		# we don't want to see buttons we can't even access, do we? default: "false"
-set ea_moderationNotification "false"   # this can be either "false" or a discord webhook address, this will send a discord message if an admin takes actions against a player  ( such as banning and kicking )
+# EasyAdmin + Anticheese
+add_ace group.admin easyadmin allow	    		# allow all commands for admins
+add_ace group.admin anticheese.bypass allow 	# bypass admin group
+set ea_useQueue "true"							# enable EasyAdmin Queue System, default: "false"
+set ea_QueueTries "500"							# how often do we want to retry to join the queue? default: "500"
+set ea_MenuButton "56"							# set our menu button to F9. default F2: "289" 
+set ea_alwaysShowButtons "false"				# we don't want to see buttons we can't even access, do we? default: "false"
+set ea_moderationNotification "false"   		# this can be either "false" or a discord webhook address, this will send a discord message if an admin takes actions against a player  ( such as banning and kicking )
+set ac_webhook “https://discordapp.com/api/webhooks/421443048698806282/YnGDkK6I9Vt4zI-H9tWdHDyuf9s1d_TeLtMUpa5EJ4aGhQzKz6n_mLXZyyTPKQZev5z-”
 
 # remove the # to hide player endpoints in external log output
 sv_endpointprivacy true
