--- a/server.cfg
+++ b/server.cfg
@@ -93,6 +93,7 @@ start esx_eden_garage
 start esx_AdvancedFuel
 start esx_outlawalert
 start esx_rpchat
+start esx_blanchisseur
 
 # OTHERS ADDONS
 start vSync
@@ -129,6 +130,7 @@ sv_scriptHookAllowed 0
 # change this
 #rcon_password yay
 
+# HOSTNAME
 sv_hostname "My new FXServer!"
 
 # nested configs!
@@ -166,7 +168,7 @@ set ea_QueueTries "500"							# how often do we want to retry to join the queue?
 set ea_MenuButton "56"							# set our menu button to F9. default F2: "289" 
 set ea_alwaysShowButtons "false"				# we don't want to see buttons we can't even access, do we? default: "false"
 set ea_moderationNotification "false"   		# this can be either "false" or a discord webhook address, this will send a discord message if an admin takes actions against a player  ( such as banning and kicking )
-set ac_webhook “https://discordapp.com/api/webhooks/421443048698806282/YnGDkK6I9Vt4zI-H9tWdHDyuf9s1d_TeLtMUpa5EJ4aGhQzKz6n_mLXZyyTPKQZev5z-”
+set ac_webhook "" # Discord Webhook Anticheese
 
 # remove the # to hide player endpoints in external log output
 sv_endpointprivacy true
