cv_control plus tranlantions fixes

--- a/server.cfg
+++ b/server.cfg
@@ -107,7 +107,7 @@ start noplayerblips
 #start pingkick
 start afkkick
 start NoMoreScope
-start vehcontrol
+start cv_control
 
 # CUSTOMS
 start synn-loadscreen
