drugstonpc + customdp ymap

--- a/server.cfg
+++ b/server.cfg
@@ -94,6 +94,7 @@ start esx_AdvancedFuel
 start esx_outlawalert
 start esx_rpchat
 start esx_blanchisseur
+start esx_drugstonpc
 
 # OTHERS ADDONS
 start vSync
@@ -111,6 +112,7 @@ start cv_control
 
 # CUSTOMS
 start synn-loadscreen
+start xysdynamicpd
 
 # CUSTOM VEHICLES
 start hayabusa
