--- a/server.cfg
+++ b/server.cfg
@@ -112,8 +112,11 @@ start cv_control
 
 # CUSTOMS
 start synn-loadscreen
+
+# CUSTOMS MAPS
 start xysdynamicpd
 start favela
+start bob74_ipl
 
 # CUSTOM VEHICLES
 start hayabusa
