--- a/server.cfg
+++ b/server.cfg
@@ -60,6 +60,7 @@ start esx_animations
 start esx_advanced_inventory
 start esx_service
 start esx_phone
+start esx_AdvancedFuel
 
 # ESX Jobs
 start esx_policejob
@@ -70,6 +71,7 @@ start esx_drugs
 start esx_taxijob
 start esx_mecanojob
 start esx_realestateagentjob
+start esx_vigneronjob
 
 # ESX Shops
 start esx_shops
@@ -90,7 +92,6 @@ start esx_thief
 start esx_vehicle_inventory
 start esx_jailer
 start esx_eden_garage
-start esx_AdvancedFuel
 start esx_outlawalert
 start esx_rpchat
 start esx_blanchisseur
