--- a/server.cfg
+++ b/server.cfg
@@ -126,7 +126,7 @@ start xt660
 # SNIPPETS
 start NoMoreWeaponsOnNPC
 start NoWeaponReward
-start NoLicense
+#start NoLicense
 start NoMoreCopNPC
 
 # SESSIONMANAGER
