big sunday update
esx_aiomenu + locksystem with interactsound + trying to fix some cv_control problem rolling back the files

--- a/server.cfg
+++ b/server.cfg
@@ -110,6 +110,9 @@ start noplayerblips
 start afkkick
 start NoMoreScope
 start cv_control
+start InteractSound
+start LockSystem
+start esx_aiomenu
 
 # CUSTOMS
 start synn-loadscreen
