excluding some resources
locksystem and cv_control

--- a/server.cfg
+++ b/server.cfg
@@ -96,8 +96,9 @@ start esx_outlawalert
 start esx_rpchat
 start esx_blanchisseur
 start esx_drugstonpc
+start esx_aiomenu
 
-# OTHERS ADDONS
+# ADDONS
 start vSync
 start pNotify
 start SexySpeedometer
@@ -107,12 +108,8 @@ start BetterRecoil
 start RealAITraffic
 start noplayerblips
 #start pingkick
-start afkkick
+#start afkkick
 start NoMoreScope
-start cv_control
-start InteractSound
-start LockSystem
-start esx_aiomenu
 
 # CUSTOMS
 start synn-loadscreen
