--- a/server.cfg
+++ b/server.cfg
@@ -61,17 +61,25 @@ start esx_advanced_inventory
 start esx_service
 start esx_phone
 start esx_AdvancedFuel
+start esx_vehicle_inventory
+start esx_borrmaskin
 
-# ESX Jobs
+# ESX JOBS
 start esx_policejob
 start esx_jobs
 start esx_joblisting
 start esx_ambulancejob
-start esx_drugs
 start esx_taxijob
 start esx_mecanojob
 start esx_realestateagentjob
 start esx_vigneronjob
+start esx_bankerjob
+
+# ESX SERVICES
+start esx_dmvschool
+start new_banking
+start esx_hospital
+start esx_blanchisseur
 
 # ESX Shops
 start esx_shops
@@ -81,21 +89,22 @@ start esx_weashops
 start esx_vehicleshop
 start esx_lscustom
 
-# ESX Others
-start new_banking
-start esx_garage
-start esx_hospital
-start esx_property
+# ESX ILLEGAL
+start esx_drugs
+start esx_drugstonpc
 start esx_holdup
-start esx_dmvschool
+start esx_holdupbank
 start esx_thief
-start esx_vehicle_inventory
-start esx_jailer
+
+# ESX UTILS
+start esx_garage
+start esx_property
 start esx_eden_garage
+
+# ESX Others
+start esx_jailer
 start esx_outlawalert
 start esx_rpchat
-start esx_blanchisseur
-start esx_drugstonpc
 start esx_aiomenu
 
 # ADDONS
@@ -136,7 +145,7 @@ restart sessionmanager
 sv_scriptHookAllowed 0
 
 # change this
-#rcon_password yay
+rcon_password eh78a9ehaushuio543
 
 # HOSTNAME
 sv_hostname "My new FXServer!"
