--- a/server.cfg
+++ b/server.cfg
@@ -64,6 +64,14 @@ start esx_AdvancedFuel
 start esx_vehicle_inventory
 start esx_borrmaskin
 
+# ESX Shops
+start esx_shops
+start esx_clotheshop
+start esx_barbershop
+start esx_weashops
+start esx_vehicleshop
+start esx_lscustom
+
 # ESX JOBS
 start esx_policejob
 start esx_jobs
@@ -80,14 +88,7 @@ start esx_dmvschool
 start new_banking
 start esx_hospital
 start esx_blanchisseur
-
-# ESX Shops
-start esx_shops
-start esx_clotheshop
-start esx_barbershop
-start esx_weashops
-start esx_vehicleshop
-start esx_lscustom
+start es_carwash
 
 # ESX ILLEGAL
 start esx_drugs
@@ -110,15 +111,15 @@ start esx_aiomenu
 # ADDONS
 start vSync
 start pNotify
+start noplayerblips
 start SexySpeedometer
 start CompassStreetHUD
-start coordsaver
 start BetterRecoil
+start NoMoreScope
 start RealAITraffic
-start noplayerblips
 #start pingkick
 #start afkkick
-start NoMoreScope
+start coordsaver
 
 # CUSTOMS
 start synn-loadscreen
