tattoosshop and others
pingKicker, carcleanup

--- a/server.cfg
+++ b/server.cfg
@@ -89,6 +89,9 @@ start new_banking
 start esx_hospital
 start esx_blanchisseur
 start es_carwash
+start esx_garage
+start esx_property
+start esx_eden_garage
 
 # ESX ILLEGAL
 start esx_drugs
@@ -97,16 +100,11 @@ start esx_holdup
 start esx_holdupbank
 start esx_thief
 
-# ESX UTILS
-start esx_garage
-start esx_property
-start esx_eden_garage
-
 # ESX Others
+start esx_aiomenu
 start esx_jailer
 start esx_outlawalert
 start esx_rpchat
-start esx_aiomenu
 start esx_cruisecontrol
 
 # ADDONS
@@ -118,9 +116,10 @@ start CompassStreetHUD
 start BetterRecoil
 start NoMoreScope
 start RealAITraffic
-#start pingkick
-#start afkkick
+start pingKicker
+start afkkick
 start coordsaver
+start CarCleanUp
 
 # CUSTOMS
 start synn-loadscreen
@@ -137,7 +136,6 @@ start xt660
 # SNIPPETS
 start NoMoreWeaponsOnNPC
 start NoWeaponReward
-#start NoLicense
 start NoMoreCopNPC
 
 # SESSIONMANAGER
@@ -147,7 +145,7 @@ restart sessionmanager
 sv_scriptHookAllowed 0
 
 # change this
-rcon_password eh78a9ehaushuio543
+rcon_password eh7g46232df3
 
 # HOSTNAME
 sv_hostname "My new FXServer!"
