--- a/server.cfg
+++ b/server.cfg
@@ -115,6 +115,7 @@ start SexySpeedometer
 start CompassStreetHUD
 start BetterRecoil
 start NoMoreScope
+start pubg_aim
 start RealAITraffic
 start pingKicker
 start afkkick
