--- a/server.cfg
+++ b/server.cfg
@@ -71,6 +71,7 @@ start esx_barbershop
 start esx_weashops
 start esx_vehicleshop
 start esx_lscustom
+start esx_tattoosShops
 
 # ESX JOBS
 start esx_policejob
@@ -120,7 +121,7 @@ start RealAITraffic
 start pingKicker
 start afkkick
 start coordsaver
-start CarCleanUp
+#start CarCleanUp
 
 # CUSTOMS
 start synn-loadscreen
