--- a/server.cfg
+++ b/server.cfg
@@ -125,6 +125,7 @@ start coordsaver
 
 # CUSTOMS
 start synn-loadscreen
+start coloredhud
 
 # CUSTOMS MAPS
 start xysdynamicpd
@@ -139,6 +140,7 @@ start xt660
 start NoMoreWeaponsOnNPC
 start NoWeaponReward
 start NoMoreCopNPC
+start Pointfinger
 
 # SESSIONMANAGER
 restart sessionmanager
