--- a/server.cfg
+++ b/server.cfg
@@ -141,6 +141,7 @@ start NoMoreWeaponsOnNPC
 start NoWeaponReward
 start NoMoreCopNPC
 start Pointfinger
+start Crouch
 
 # SESSIONMANAGER
 restart sessionmanager
