esx_shop with bars

--- a/server.cfg
+++ b/server.cfg
@@ -46,6 +46,7 @@ start esx_datastore
 start esx_society
 start esx_identity
 start esx_billing
+start esx_map
 start esx_basicneeds
 start esx_optionalneeds
 start esx_status
