--- a/server.cfg
+++ b/server.cfg
@@ -152,7 +152,7 @@ restart sessionmanager
 sv_scriptHookAllowed 0
 
 # change this
-rcon_password eh7g46232df3
+rcon_password CHANGEME
 
 # HOSTNAME
 sv_hostname "My new FXServer!"
