--- a/server.cfg
+++ b/server.cfg
@@ -125,9 +125,17 @@ start afkkick
 start coordsaver
 #start CarCleanUp
 
+# SNIPPETS
+start NoMoreWeaponsOnNPC
+start NoWeaponReward
+start NoMoreCopNPC
+start Pointfinger
+start Crouch
+start TimeAndDateDisplay
+
 # CUSTOMS
 start synn-loadscreen
-#start coloredhud
+start coloredhud
 
 # CUSTOMS MAPS
 start xysdynamicpd
@@ -137,13 +145,6 @@ start bob74_ipl
 # CUSTOM VEHICLES
 start hayabusa
 start xt660
-
-# SNIPPETS
-start NoMoreWeaponsOnNPC
-start NoWeaponReward
-start NoMoreCopNPC
-start Pointfinger
-start Crouch
 
 # SESSIONMANAGER
 restart sessionmanager
