--- a/server.cfg
+++ b/server.cfg
@@ -135,7 +135,7 @@ start TimeAndDateDisplay
 
 # CUSTOMS
 start synn-loadscreen
-start coloredhud
+#start coloredhud
 
 # CUSTOMS MAPS
 start xysdynamicpd
