iplloader + drz_interiors

--- a/server.cfg
+++ b/server.cfg
@@ -123,6 +123,7 @@ start RealAITraffic
 start pingKicker
 start afkkick
 start coordsaver
+start drz_interiors
 #start CarCleanUp
 
 # SNIPPETS
@@ -138,9 +139,10 @@ start synn-loadscreen
 #start coloredhud
 
 # CUSTOMS MAPS
-start xysdynamicpd
-start favela
+#start xysdynamicpd
+#start favela
 start bob74_ipl
+start iplLoader
 
 # CUSTOM VEHICLES
 start hayabusa
