--- a/server.cfg
+++ b/server.cfg
@@ -53,7 +53,7 @@ start esx_status
 start skinchanger
 start esx_skin
 start esx_license
-start instance
+#start instance
 start esx_voice
 start salty_death
 start esx_accessories
@@ -91,7 +91,7 @@ start new_banking
 start esx_hospital
 start esx_blanchisseur
 start es_carwash
-start esx_garage
+#start esx_garage
 start esx_property
 start esx_eden_garage
 
