--- a/server.cfg
+++ b/server.cfg
@@ -85,6 +85,13 @@ start esx_realestateagentjob
 start esx_vigneronjob
 start esx_bankerjob
 
+# ESX ILLEGAL
+start esx_drugs
+start esx_drugstonpc
+start esx_holdup
+start esx_holdupbank
+start esx_thief
+
 # ESX SERVICES
 start esx_dmvschool
 start new_banking
@@ -94,13 +101,6 @@ start es_carwash
 #start esx_garage
 start esx_property
 start esx_eden_garage
-
-# ESX ILLEGAL
-start esx_drugs
-start esx_drugstonpc
-start esx_holdup
-start esx_holdupbank
-start esx_thief
 
 # ESX Others
 start esx_aiomenu
@@ -116,12 +116,12 @@ start pNotify
 start noplayerblips
 start SexySpeedometer
 start CompassStreetHUD
-start BetterRecoil
-start NoMoreScope
-start pubg_aim
+#start BetterRecoil
+#start NoMoreScope
+#start pubg_aim
 start RealAITraffic
-start pingKicker
-start afkkick
+#start pingKicker
+#start afkkick
 start coordsaver
 start drz_interiors
 #start CarCleanUp
