garage mod plus showcoords

--- a/server.cfg
+++ b/server.cfg
@@ -125,6 +125,7 @@ start RealAITraffic
 start coordsaver
 start drz_interiors
 #start CarCleanUp
+start showcoords
 
 # SNIPPETS
 start NoMoreWeaponsOnNPC
