--- a/server.cfg
+++ b/server.cfg
@@ -139,11 +139,16 @@ start TimeAndDateDisplay
 start synn-loadscreen
 #start coloredhud
 
+# PLUGINS
+start object-teleports
+start object-loader
+
 # CUSTOMS MAPS
 #start xysdynamicpd
 #start favela
 start bob74_ipl
 start iplLoader
+start campinho
 
 # CUSTOM VEHICLES
 start hayabusa
