--- a/server.cfg
+++ b/server.cfg
@@ -81,7 +81,7 @@ start esx_joblisting
 start esx_ambulancejob
 start esx_taxijob
 start esx_mecanojob
-start esx_realestateagentjob
+#start esx_realestateagentjob
 start esx_vigneronjob
 start esx_bankerjob
 
@@ -130,7 +130,7 @@ start showcoords
 # SNIPPETS
 start NoMoreWeaponsOnNPC
 start NoWeaponReward
-start NoMoreCopNPC
+#start NoMoreCopNPC
 start Pointfinger
 start Crouch
 start TimeAndDateDisplay
